# nifty

./: .gitignore  CMakeLists.txt  LICENSE  README.md  enable.in  package.json
cmake/: GenerateEnableFile.cmake  NiftyConfig.cmake.in
include/: CMakeLists.txt
include/nifty/: assert.hh  cast.hh  diff.hh  extract.hh  gumtree.hh  print.hh  regions.hh  sese-diff.hh  strip.hh
lib/: CMakeLists.txt  diff.cc  extract.cc  gumtree.cc  print.cc  regions.cc  strip.cc
src/: CMakeLists.txt  PLAN.md  index.ts
src/cli/: PLAN.md  config.ts  index.ts  output.ts  validators.ts
src/cli/commands/: .config.json  index.ts  search.ts
src/nifty/: .#args.hh  CMakeLists.txt  args.hh  main.cc
src/parser/: PLAN.md  doxygen-parser.ts  index.ts  types.ts  xml-reader.ts
src/parser/entity-builders/: base.ts  class-builder.ts  enum-builder.ts  factory.ts  function-builder.ts  index.ts  namespace-builder.ts
src/parser/extractors/: index.ts  inheritance.ts  members.ts  parameters.ts
src/search/: PLAN.md  index.ts  search-engine.ts  types.ts
src/search/engines/: base.ts  fuzzy.ts  simple.ts
src/search/filters/: base.ts  index.ts  namespace-filter.ts  type-filter.ts
src/search/formatters/: base.ts  index.ts  json.ts  text.ts
src/search/utils/: highlighter.ts  scorer.ts
src/strip-tbaa/: CMakeLists.txt  main.cc
test/: Makefile  dce.c  gvn.c  licm.c  loop-reduce.c  loop-unroll.c  simplifycfg.c  tailcallelim.c
